2007-04-09  Alexey Shchepin  <alexey@sevcom.net>

	* src/ejabberd_sm.erl: Minor optimisation

	* src/ejabberd_system_monitor.erl: Experimental watchdog
	* src/ejabberd_sup.erl: Likewise
	* src/ejabberd_config.erl: Likewise

2007-03-22  Mickael Remond  <mickael.remond@process-one.net>

	* src/guide.tex: Fixed typo.

2007-03-22  Alexey Shchepin  <alexey@sevcom.net>

	* src/mod_muc/mod_muc.erl: Better behaviour under high load

2007-03-18  Alexey Shchepin  <alexey@sevcom.net>

	* src/ejabberd_s2s.erl: Don't bounce packets with "error" and
	"result" type

	* src/ejabberd_s2s.erl: Fixed spelling

	* src/ejabberd_s2s.erl: Don't start s2s process for existing
	connection in case of race condition

2007-03-13  Alexey Shchepin  <alexey@sevcom.net>

	* src/ejabberd_service.erl: Added shaper_rule option, changed
	service connection log message

2007-03-13  Mickael Remond  <mickael.remond@process-one.net>

	* src/ejabberd_service.erl: Add extra info in the log about which
	components is connected and which Erlang process is handling
	it. This is usefull in context where many types of components are
	used (Thanks to Jerome Sautret) (EJAB-211).

2007-03-10  Mickael Remond  <mickael.remond@process-one.net>

	* src/web/ejabberd_http.erl: Support for binaries in ejabberd HTTP
	server (Thanks to Massimiliano Mirra) (EJAB-197).

	* src/configure.ac: autoconf improvements (thanks to Tony Finch)
	(EJAB-204).
	* src/aclocal.m4: Likewise.

	* src/odbc/ejabberd_odbc.erl: ejabberd admin can now choose the
	relational database port to use from ejabberd configuration file
	(EJAB-195).
	* src/doc/guide.tex: Likewise.

2007-03-02  Mickael Remond  <mickael.remond@process-one.net>

	* src/mod_muc/mod_muc_log.erl: Fix wrong return on check access
	log.

2007-03-01  Alexey Shchepin  <alexey@sevcom.net>

	* src/msgs/ru.msg: Updated (thanks to Sergei Golovan)
	* src/msgs/uk.msg: Likewise

2007-02-22  Alexey Shchepin  <alexey@sevcom.net>

	* src/mod_pubsub/mod_pubsub.erl: Bugfix
